# banktrade

./: readme.md
client/: CMakeLists.txt
client/headers/:  ui.h  cenums.h  client.h  customer.h  net.h  savecash.h  transcation.h  transcationtype.h  ui.h
client/sources/: client.cpp  customer.cpp  main.cpp  net.cpp  transcation.cpp  ui.cpp
server/: CMakeLists.txt
server/headers/:  ui.h  bank.h  protocol.h  server.h  threadpool.h
server/sources/: main.cpp  protocol.cpp  server.cpp  threadpool.cpp
